<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/mainActivityEditTextMessage"
        android:onClick="onReverseButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Button
        android:id="@+id/mainActivityButtonReverse"
        android:onClick="onReverseButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reverse" />

    <Button
        android:id="@+id/mainActivityButtonOpenMessageDetailActivity"
        android:onClick="onOpenMessageDetailActivityButtonClicked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Open Message Detail" />
</LinearLayout>